--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "brewhapi",
   "version": "1.0.0",
-  "description": "brew http api",
+  "description": "A mock API server for fetching tasty brews",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "angelo di paolo",
+  "license": "MIT",
   "dependencies": {
     "hapi": "^9.0.3",
     "lodash": "^3.10.1"
